--- a/styles/main.css
+++ b/styles/main.css
@@ -113,11 +113,10 @@ a {
       -ms-flex-positive: 1;
           flex-grow: 1;
   line-height: 1.8;
-  padding: 16px;
-  overflow-y: scroll; }
+  padding: 16px; }
 
 .app-footer {
-  height: 46px;
+  height: 56px;
   -ms-flex-negative: 0;
       flex-shrink: 0;
   display: -webkit-box;
@@ -129,7 +128,7 @@ a {
     padding: 5px;
     text-align: center;
     color: rgba(0, 0, 0, 0.5);
-    border-left: 2px solid rgba(0, 0, 0, 0.1);
+    border-left: 1px solid rgba(0, 0, 0, 0.1);
     -webkit-box-flex: 1;
         -ms-flex-positive: 1;
             flex-grow: 1; }
@@ -137,7 +136,7 @@ a {
       border-left: 0; }
     .app-footer a i {
       display: block;
-      font-size: 15px;
+      font-size: 18px;
       color: white;
       text-shadow: 2px 2px 0 rgba(0, 0, 0, 0.1);
       padding-bottom: 6px; }
